# cazel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cazel/Cazel/: application.h  window.h
cazel/Cazel/nuklear/: nuklear_layer.c
cazel/Cazel/platform/opengl/: opengl_context.h
cazel/Cazel/renderer/buffers/: buffers.h
cazel/lib/Nuklear/: nuklear.h
cazel/lib/Nuklear/src/: nuklear.h  nuklear_context.c  nuklear_text_editor.c  nuklear_window.c  stb_truetype.h
cazel/lib/cglm/include/cglm/: common.h
cazel/lib/cglm/test/include/: common.h
cazel/lib/cglm/win/: cglm.vcxproj
cazel/lib/glad/src/: glad.c
cazel/lib/glfw/examples/: sharing.c
cazel/lib/glfw/include/GLFW/: glfw3.h  glfw3native.h
cazel/lib/glfw/src/: cocoa_window.m  win32_platform.h  win32_window.c  x11_window.c
cazel/lib/glfw/tests/: events.c  gamma.c  iconify.c  windows.c
lib/Cazel/: CMakeLists.txt
lib/Cazel/lib/glad/: CMakeLists.txt
lib/Cazel/src/: cazel.h  common.h  main.notcode  utilities.h
lib/Cazel/src/Cazel/: application.c  application.h  context.c  context.h  core.h  entrypoint.h  input.h  main.c  main.h  window.c  window.h
lib/Cazel/src/Cazel/events/: event.c  event.h
lib/Cazel/src/Cazel/layers/: layer.c  layer.h
lib/Cazel/src/Cazel/nuklear/: nuklear_layer.c  nuklear_layer.h
lib/Cazel/src/Cazel/platform/: windows_window.c  windows_window.h
lib/Cazel/src/Cazel/platform/opengl/: opengl_context.c  opengl_context.h
lib/Cazel/src/Cazel/platform/windows/: windows_input.h  windows_window.c  windows_window.h
lib/Cazel/src/Cazel/renderer/buffers/: buffers.c  buffers.h
lib/Cazel/src/rendering/: drawable_buffer.h  renderer.c  shader.c  shader.h  shapes.h
lib/cazel/: CMakeLists.txt
lib/cazel/lib/Nuklear/demo/glfw_opengl3/: nuklear_glfw_gl3.h
lib/cazel/lib/glad/: Makefile
lib/cazel/src/: cazel.h
lib/cazel/src/cazel/: application.c  application.h  context.c  context.h  core.h  input.c  input.h  main.c  window.c  window.h
lib/cazel/src/cazel/events/: event.c  event.h
lib/cazel/src/cazel/layers/: layer.c  layer.h
lib/cazel/src/cazel/nuklear/: nuklear_layer.c  nuklear_layer.h
lib/cazel/src/cazel/platform/glfw/: glfw_input.c  glfw_input.h  glfw_window.c  glfw_window.h
lib/cazel/src/cazel/platform/linux/: linux_window.c  linux_window.h
lib/cazel/src/cazel/platform/opengl/: opengl_context.c  opengl_context.h  opengl_renderer_2d.c  opengl_renderer_2d.h
lib/cazel/src/cazel/platform/windows/: windows_input.c  windows_input.h  windows_window.c
lib/cazel/src/cazel/renderer/: orthographic_camera.c  orthographic_camera.h  orthographic_camera_controller.c  orthographic_camera_controller.h  renderer.c  renderer.h  shaders.c  shaders.h
lib/cazel/src/cazel/renderer/buffers/: buffers.c
lib/glad/include/glad/: glad.h
lib/glfw/: CMakeLists.txt
src/: main.c  new_renderer.h  utilities.c
src/assets/shaders/: flat_color.glsl  texture.glsl
src/rendering/: drawable_buffer.c  renderer.h  shapes.c
